--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+
     package="com.example.andreoliveira.biblio">
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
@@ -12,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".Login" />
+        <activity android:name=".Login"></activity>
 
         <activity android:name=".HomeActivity"></activity>
 
